<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myriad Quest</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="saveLoginText">Remember Username</string>
    <string name="login">Log In!</string>
    <string name="signUp">Sign Up!</string>

    <string name="title_activity_quest_list">Quest List</string>

    <string name="questNameDefault">Quest Name</string>
    <string name="questGiverText">Posted by:</string>
    <string name="questGiverDefault">Quest Giver</string>
    <string name="alignmentText">Alignment:</string>
    <string name="alignmentDefault">Good/Neutral/Evil</string>
    <string name="descriptionDefault">Description</string>
    <string name="reward">Reward: 10000 Gold, 10000 XP</string>

    <string name="title_activity_quest_detail">Details</string>

    <string name="title_activity_settings">Settings</string>
    <string name="updateButtonText">Update Settings</string>
    <string name="settingNameHint">Name</string>
    <string name="settingLocation">Location</string>

    <string-array name="alignmentArray">
        <item>Good</item>
        <item>Neutral</item>
        <item>Evil</item>
    </string-array>

    <string name="title_activity_registration">Register</string>
    <string name="signUpName">Name</string>

    <string-array name="questListFilterOptions">
        <item>Available Quests</item>
        <item>Accepted Quests</item>
        <item>Completed Quests</item>
    </string-array>

    <string name="noQuests">There are no quests to display for this criteria.</string>

    <!-- "Offline" Quest data -->
    <string-array name="quest0">
        <item>Bandits in the Woods</item>
        <item>GOOD</item>
        <item>The famed bounty hunter HotDog has requested the aid of a hero in ridding the woods of terrifying bandits who have thus far eluded his capture, as he is actually a dog, and cannot actually grab things more than 6 feet off the ground.</item>
        <item>(46.908588, -96.808991)</item>
        <item>HotDogg The Bounty Hunter</item>
        <item>(46.8541979, -96.8285138)</item>
    </string-array>

    <string-array name="quest1">
        <item>Special Delivery</item>
        <item>NEUTRAL</item>
        <item>Sir Jimmy was once the fastest man in the kingdom, brave as any soldier and wise as a king. Unfortunately, age catches us all in the end, and he has requested that I, his personal scribe, find a hero to deliver a package of particular importance—and protect it with their life.</item>
        <item>(46.8657639, -96.7363173)</item>
        <item>Sir Jimmy The Swift</item>
        <item>(46.8739748, -96.806112)</item>
    </string-array>

    <string-array name="quest2">
        <item>Filthy Mongrel</item>
        <item>EVIL</item>
        <item>That strange dog that everyone is treating like a bounty-hunter must go. By the order of Prince Jack, that smelly, disease ridden mongrel must be removed from our streets by any means necessary. He is disrupting the lives of ordinary citizens, and it\'s just really weird. Make it gone.</item>
        <item>(46.892386,-96.799669)</item>
        <item>Prince Jack, The Iron Horse</item>
        <item>(46.8739748, -96.806112)</item>
    </string-array>

</resources>
