<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myriadquest.myriadquest.RegistrationActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:layout_marginTop="75dp"
        android:selectAllOnFocus="true"
        android:editable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:password="true"
        android:selectAllOnFocus="true"
        android:hint="@string/password"
        android:layout_marginTop="5dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/signUpName"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="5dp"
        android:hint="@string/signUpName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alignmentSpinner"
        android:layout_below="@+id/signUpName"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/signUpName"
        android:layout_alignStart="@+id/signUpName"
        android:layout_alignRight="@+id/signUpName"
        android:layout_alignEnd="@+id/signUpName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/alignmentSpinner"
        android:layout_alignStart="@+id/alignmentSpinner"
        android:layout_alignRight="@+id/alignmentSpinner"
        android:layout_alignEnd="@+id/alignmentSpinner"
        android:layout_marginTop="122dp"
        android:onClick="beginRegistration" />

</RelativeLayout>
